# blastospim-processing-pipeline

./: .gitignore  README.md  _config.yml  pyproject.toml
scripts/: config.yaml  runInferenceSD.cmd
src/blastospim_download/: __main__.py
